--- a/Aquarium/Aquarium.csproj
+++ b/Aquarium/Aquarium.csproj
@@ -43,6 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aquarium.cs" />
+    <Compile Include="Catalog.cs" />
+    <Compile Include="IFish.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
