--- a/Aquarium/Aquarium.csproj
+++ b/Aquarium/Aquarium.csproj
@@ -45,10 +45,12 @@
   <ItemGroup>
     <Compile Include="Aquarium.cs" />
     <Compile Include="Catalog.cs" />
+    <Compile Include="Fish.cs" />
     <Compile Include="IFish.cs" />
     <Compile Include="Menu.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
